syntax = "proto3";

import "models/proto/chordNode/chordNode.proto";

option go_package = "./chordAdminModel";

service ChordAdmin {
    rpc AddActiveNode(Node) returns (Success);
    rpc GetActiveNodes(ActiveNodesRequest) returns (ActiveNodes);
    rpc TotalNumberOfActiveNodes(NumberOfActiveNodes) returns (TotalNumberOfNodes);
}

message Success {
    bool Success = 1;
}

message ActiveNodesRequest {

}

message NumberOfActiveNodes {

}

message ActiveNodes {
    repeated Node nodes = 1;
}

message TotalNumberOfNodes {
    uint64 Number = 1;
}